// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguagesPage render page after querying incomplete languages from crowdin 1`] = `
<div>
  <h2>
    Ethereum.org is available in the following languages:
  </h2>
   
  <div
    class="lang-list"
  >
    <router-link-stub
      class="lang-item border-box-shadow-hover"
      to="/"
    >
      <div
        class="lang-english-name"
      >
        English
      </div>
       
      <router-link-stub
        class="lang-name"
        to="/"
      >
        English
      </router-link-stub>
    </router-link-stub>
    <router-link-stub
      class="lang-item border-box-shadow-hover"
      to="/de/"
    >
      <div
        class="lang-english-name"
      >
        German
      </div>
       
      <router-link-stub
        class="lang-name"
        to="/de/"
      >
        Deutsch
      </router-link-stub>
    </router-link-stub>
    <router-link-stub
      class="lang-item border-box-shadow-hover"
      to="/zh/"
    >
      <div
        class="lang-english-name"
      >
        Simplified Chinese
      </div>
       
      <router-link-stub
        class="lang-name"
        to="/zh/"
      >
        简体中文
      </router-link-stub>
    </router-link-stub>
  </div>
   
  <h2>
    The following language translations are in progress:
  </h2>
   
  <div
    class="lang-list"
  >
    <a
      class="lang-item border-box-shadow-hover"
      href="https://crowdin.com/project/ethereumfoundation/ph"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="lang-english-name"
      >
        Filipino
      </div>
       
      <div>
        Translation progress: 45%
      </div>
       
      <div>
        Review progress: 0%
      </div>
       
      <a
        href="https://crowdin.com/project/ethereumfoundation/ph"
        rel="noopener noreferrer"
        target="_blank"
      >
        Contribute
      </a>
    </a>
    <a
      class="lang-item border-box-shadow-hover"
      href="https://crowdin.com/project/ethereumfoundation/gu"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="lang-english-name"
      >
        Gujarati
      </div>
       
      <div>
        Translation progress: 100%
      </div>
       
      <div>
        Review progress: 38%
      </div>
       
      <a
        href="https://crowdin.com/project/ethereumfoundation/gu"
        rel="noopener noreferrer"
        target="_blank"
      >
        Contribute
      </a>
    </a>
  </div>
</div>
`;

exports[`LanguagesPage render page before querying crowdin completes 1`] = `
<div>
  <h2>
    Ethereum.org is available in the following languages:
  </h2>
   
  <div
    class="lang-list"
  >
    <router-link-stub
      class="lang-item border-box-shadow-hover"
      to="/"
    >
      <div
        class="lang-english-name"
      >
        English
      </div>
       
      <router-link-stub
        class="lang-name"
        to="/"
      >
        English
      </router-link-stub>
    </router-link-stub>
    <router-link-stub
      class="lang-item border-box-shadow-hover"
      to="/de/"
    >
      <div
        class="lang-english-name"
      >
        German
      </div>
       
      <router-link-stub
        class="lang-name"
        to="/de/"
      >
        Deutsch
      </router-link-stub>
    </router-link-stub>
    <router-link-stub
      class="lang-item border-box-shadow-hover"
      to="/zh/"
    >
      <div
        class="lang-english-name"
      >
        Simplified Chinese
      </div>
       
      <router-link-stub
        class="lang-name"
        to="/zh/"
      >
        简体中文
      </router-link-stub>
    </router-link-stub>
  </div>
   
  <h2>
    The following language translations are in progress:
  </h2>
   
  <div
    class="lang-list"
  />
</div>
`;
